--- a/rubix24/src/global.css
+++ b/rubix24/src/global.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
