--- a/rubix24/src/global.css
+++ b/rubix24/src/global.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap');
+
+  @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+.container {
+    margin-inline: 6rem;
+}
 
 @tailwind base;
 @tailwind components;
