--- a/rubix24/src/global.css
+++ b/rubix24/src/global.css
@@ -38,22 +38,17 @@ input{
     background: linear-gradient(180deg, rgba(20, 20, 20, 0.59), rgba(77, 36, 103, 0.3));
 }
 
+/* For WebKit-based browsers (Chrome, Safari) */
 ::-webkit-scrollbar {
-    width: 0.5em;
+    width: 1px;
   }
-
-::-webkit-scrollbar-track {
-  background: #f1f1f1;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: #888;
-}
-
-/* Hide scrollbar for Firefox */
-/* Note: The scrollbar may still be visible in some situations, 
-   like when using the mouse wheel or touchpad */
-body {
-  scrollbar-width: thin;
-  scrollbar-color: #f1f1f1 #888;
-}
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #323232; /* darkslategray color */
+  }
+  
+  /* For Firefox */
+  * {
+    scrollbar-color: #323232 transparent;
+    scrollbar-width: thin;
+  }
