--- a/rubix24/src/global.css
+++ b/rubix24/src/global.css
@@ -56,3 +56,92 @@ input{
     scrollbar-color: #323232 transparent;
     scrollbar-width: thin;
   }
+
+
+
+
+.nav-link {
+	padding: 0.5rem; 
+border-radius: 0.375rem; 
+color: #ffffff; 
+box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25); 
+background: #1A1A1A;
+	transition: color 0.3s ease-in-out;
+}
+svg{
+    display: block;
+    color: white;
+    font-size: 1.5rem;
+}
+
+
+
+@keyframes fadeIn {
+	from {
+		opacity: 0;
+		transform: translateY(-10px);
+	}
+
+	to {
+		opacity: 1;
+		transform: translateY(20px);
+	}
+}
+
+@keyframes fadeOut {
+	from {
+		opacity: 1;
+		transform: translateY(0);
+	}
+
+	to {
+		opacity: 0;
+		transform: translateY(-10px);
+	}
+}
+
+@media (max-width: 750px) {
+	.nav {
+		margin: 20px;
+		border: 0px;
+		transition: fadeIn 1s ease-in-out;
+	}
+
+	.navbar-links {
+		display: none;
+		flex-direction: column;
+		position: absolute;
+		top: 75px;
+		left: 0;
+		background: #121212;
+		width: 60vw;
+		left: 33%;
+        padding: 18px 0 18px 0;
+		text-align: center;
+		border-radius: 20px;
+		z-index: 1000;
+		animation: fadeIn 0.5s ease-in-out forwards;
+	}
+
+	.navbar-links.active {
+		display: flex;
+	}
+
+	.nav-link {
+		display: block;
+		padding: 10px;
+		color: #ffffff;
+		transition: color 0.3s ease-in-out;
+	}
+
+	.open-menu-btn {
+		display: flex;
+		background-color:transparent;
+		border: none;
+	}
+    .navbar_place{
+        display: flex;
+        justify-content: end;
+        
+    }
+}
