--- a/rubix24/src/global.css
+++ b/rubix24/src/global.css
@@ -156,4 +156,69 @@ svg{
         
     }
 }
+.input-wrapper {
+    width: 100%;
+    height: 2.5rem;
+    border: none;
+    border-radius: 10px;
+    padding: 0 15px;
+    box-shadow: 0px 0px 8px #ddd;
+    background-color: white;
+    display: flex;
+    align-items: center;
+  }
+  
+  input {
+    background-color: transparent;
+    border: none;
+    height: 100%;
+    font-size: 1.25rem;
+    width: 100%;
+    margin-left: 5px;
+    color: #121212;
+  }
+  
+  input:focus {
+    outline: none;
+  }
+  
+  #search-icon {
+    color: royalblue;
+  }
     
+
+
+  .search-container {
+   padding: 2rem;
+  }
+  .bar{
+    width: 100%;
+  border: none;
+  border-radius: 10px;
+  padding: 0 15px;
+  box-shadow: 0px 0px 8px #ddd;
+  background-color: #323232;
+  display: flex;
+  align-items: center;
+  }
+  .inputSearch {
+    padding: 8px;
+    margin-right: 8px;
+   
+  }
+  
+  button {
+    padding: 8px;
+    cursor: pointer;
+  }
+  
+  .result-list {
+    list-style: none;
+    padding: 0;
+    margin-top: 2rem;
+  }
+  
+  .result-list li {
+    width: auto;
+  }
+  
