--- a/rubix24/src/global.css
+++ b/rubix24/src/global.css
@@ -169,7 +169,7 @@ svg{
     align-items: center;
   }
   
-  input {
+  .inputl {
     background-color: transparent;
     border: none;
     height: 100%;
